add reponsevity to navbar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
   <body>
     <div class="content">
       <nav class="navbar">
-        <h3 class="navBarTitle">NomeFodase</h3>
+        <span class="navBarLeft">
+          <h3 class="navBarTitle">NomeFodase</h3>
+          <img src="./images/logo.png" alt="brand-logo.png" class="nav-logo">
+        </span>
         <section class="links">
           <a
             href=""
