Esse arquivo tem a função da navbar sticky pra ficar sempre no topo e cor de fundo

--- a/index.html
+++ b/index.html
@@ -1,47 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0"
-    />
-    <link
-      rel="stylesheet"
-      href="./style/index.css"
-    />
-    <title>NomeFodase</title>
-  </head>
-  <body>
-    <div class="content">
-      <nav class="navbar">
-        <span class="navBarLeft">
-          <h3 class="navBarTitle">NomeFodase</h3>
-          <img src="./images/logo.png" alt="brand-logo.png" class="nav-logo">
-        </span>
-        <section class="links">
-          <a
-            href=""
-            class="aLink"
-            >Home</a
-          >
-          <div class="dropdown">
-            <button class="dropbtn aLink">Dropdown</button>
-            <div class="dropdown-content">
-              <a href="#">Penis pequeno</a>
-              <a href="#">Penis médio</a>
-              <a href="#">Penis grande</a>
-            </div>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="./style/index.css" />
+  <title>Modelagem de Dados</title>
+</head>
+
+<body>
+  <div class="content">
+    <nav class="navbar">
+      <span class="navBarLeft">
+        <h3 class="navBarTitle">NomeFodase</h3>
+        <img src="./images/logo.png" alt="brand-logo.png" class="nav-logo">
+      </span>
+      <section class="links">
+        <a href="" class="aLink">Home</a>
+        <div class="dropdown">
+          <button class="dropbtn aLink">Dropdown</button>
+          <div class="dropdown-content">
+            <a href="#">Penis pequeno</a>
+            <a href="#">Penis médio</a>
+            <a href="#">Penis grande</a>
           </div>
-          <a
-            href=""
-            class="aLink"
-            >Quem somos</a
-          >
-        </section>
-      </nav>
-      <section class="courses"></section>
-      <footer class="footer">Made with love</footer>
-    </div>
-  </body>
+        </div>
+        <a href="" class="aLink">Quem somos</a>
+      </section>
+    </nav>
+    <section class="courses">
+     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque ea sit officiis, excepturi ullam quos. Temporibus libero repudiandae veniam molestiae quam laboriosam illo debitis! Earum quis pariatur cum quod doloribus.
+    </section>
+    <footer class="footer">Made with love</footer>
+  </div>
+</div>
+</body>
+
 </html>
