--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
       <span class="navBarLeft">
         <h3 class="navBarTitle">NomeFodase</h3>
-        <img src="./images/logo.png" alt="brand-logo.png" class="nav-logo">
+        <img src="./assets/logo.png" alt="brand-logo.png" class="nav-logo">
       </span>
       <section class="links">
         <a href="" class="aLink">Home</a>
@@ -28,7 +28,7 @@
         <a href="" class="aLink">Quem somos</a>
       </section>
     </nav>
-    <section class="courses">
+    <section class="page">
      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Itaque ea sit officiis, excepturi ullam quos. Temporibus libero repudiandae veniam molestiae quam laboriosam illo debitis! Earum quis pariatur cum quod doloribus.
     </section>
     <footer class="footer">Made with love</footer>
