--- a/html/ModelagemDados.html
+++ b/html/ModelagemDados.html
@@ -8,23 +8,21 @@
 </head>
 <body>
     <div class="page">
-        <div class="header">
-            <p class="title">O que é modelagem de dados?</p>
+        <div class="title">
+            O que é modelagem de dados?
         </div>
 
-        <div class="informations">
+        <div class="textContainer">
             <p class="subtitleText">Primeira vez vendo o curso?</p>
-            <p class="text">Já parou para pensar como as grandes empresas projetam seus se preparam para executar
+            <p class="text">Já parou para pensar como as grandes empresas projetam e se preparam para executar
                  projetos de grande escopo?
                  Como são utilizados os dados coletados por elas? 
-                 Ou até mesmo como todos do projeto podem ter uma visão única e igual do projeto? </p>
-
-            <p class="text">
+                 Ou até mesmo como todos do projeto podem ter uma visão única e igual do projeto? <br>
                 Caso não saiba, este curso será perfeito para realizar uma breve
-                introdução a modelagem de dados!
-            </p>
-
-
+                introdução a modelagem de dados!  </p>
+        </div>
+        <div class="textContainer">
+            <p class="subtitleText">Introdução a modelagem de dados.</p>
         </div>
 
     </div>
