adding a new page

--- a/html/ModelagemDados.html
+++ b/html/ModelagemDados.html
@@ -11,7 +11,7 @@
         <div class="title">
             O que é modelagem de dados?
         </div>
-
+        <div class="container">
         <div class="textContainer">
             <p class="subtitleText">Primeira vez vendo o curso?</p>
             <p class="text">Já parou para pensar como as grandes empresas projetam e se preparam para executar
@@ -21,11 +21,14 @@
                 Caso não saiba, este curso será perfeito para realizar uma breve
                 introdução a modelagem de dados!  </p>
         </div>
-        <div class="textContainer">
+    </div>
+    <div class="container">
+        <div class="textContainer">     
             <p class="subtitleText">Introdução a modelagem de dados.</p>
         </div>
 
     </div>
+</div>
 
 
 
