--- a/html/howToModelData.html
+++ b/html/howToModelData.html
@@ -6,26 +6,40 @@
     <link rel="stylesheet" href="../style/index.css" />
     <title>Como Modelar Dados</title>
 </head>
-<body>
-    <div class="page">
-        <div class="title">
-        Como Modelar Dados?
-        </div>
-        <div class="container">
-        <div class="textContainer">
-            <div class="subtitleText">
-                Como Começar?
-            </div>
-            <div class="text">
-                <pre>
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Et ipsam itaque quia aliquid autem aperiam placeat
-dolor ducimus libero ullam cum amet vel, expedita quo magni assumenda minus at. Id!
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, debitis repudiandae? Nesciunt aut 
-assumenda optio distinctio cum, neque fugit! 
-Ab adipisci incidunt est repudiandae! Iste corrupti libero quod repudiandae mollitia.
-                </pre>
-            </div>
-        </div>
-        </div>
+<body class="principalCoantainer">
+    <header class="header">
+        <a href="#" class="logo">Logo</a>
+        <ul class="ul">
+            <li class="li"><a href="#" class="a" id="active">Home</a></li>
+            <li class="li"><a href="#" class="a">Dropdown</a></li>
+            <li class="li"><a href="#" class="a">Quem somos</a></li>
+        </ul>
+    </header>
+    <section class="section">
+        <img src="../assests/Modelos.png" class="img">
+        <h2 id="text">Como Modelar Dados</h2>
+    </section>
+    <div class="sec">
+        <h2>Placeholder</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae illum exercitationem, 
+            ipsa commodi distinctio velit reprehenderit accusantium eius, natus, iste alias. 
+            Neque nam odio ab adipisci temporibus eius, nesciunt tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, 
+            molestiae? Totam quae sit consectetur, dolorem, 
+            deserunt corporis at illo fuga debitis quidem molestias? 
+            Repellat dignissimos assumenda optio praesentium aliquam enim!
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae illum exercitationem, 
+            ipsa commodi distinctio velit reprehenderit accusantium eius, natus, iste alias. 
+            Neque nam odio ab adipisci temporibus eius, nesciunt tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, 
+            molestiae? Totam quae sit consectetur, dolorem, 
+            deserunt corporis at illo fuga debitis quidem molestias? 
+            Repellat dignissimos assumenda optio praesentium aliquam enim!
+            <br><br>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae illum exercitationem, 
+            ipsa commodi distinctio velit reprehenderit accusantium eius, natus, iste alias. 
+            Neque nam odio ab adipisci temporibus eius, nesciunt tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, 
+            molestiae? Totam quae sit consectetur, dolorem, 
+            deserunt corporis at illo fuga debitis quidem molestias? 
+            Repellat dignissimos assumenda optio praesentium aliquam enim!<br><br></p>
+    </div>
 </body>
 </html>
