--- a/html/ModelagemDados.html
+++ b/html/ModelagemDados.html
@@ -7,7 +7,8 @@
     <title>O que é modelagem de dados</title>
 </head>
 <body>
-    <div class="page">
+    <div class="pageModelagem">
+        <a href = "../index.html">Voltar provisorio</a>
         <div class="title">
             O que é modelagem de dados?
         </div>
@@ -25,14 +26,28 @@
     <div class="container">
         <div class="textContainer">     
             <p class="subtitleText">Introdução a modelagem de dados.</p>
+            <p class="text">A modelagem de dados é o processo de criação de um esquema visual de um sistema,
+                 seus dados e suas informações. Esse diagrama ajuda partes distintas do projeto terem uma visão unificada
+                 do mesmo. <br></p>
+       </div>
+       <div class="textContainer">
+            <p class="subtitleText">Conteúdo do curso.</p>
+                <ul class="text">
+                <li>Principais etapas da modelagem de dados.</li>
+                <li>Como construir uma base de dados eficiente.</li>
+                <li>Notações modelagem de dados.</li>
+                <li>Como modelar dados.</li>
+                <li>Modelo conceitual.</li>
+                <li>Modelo lógico.</li>    
+                <li>Modelos físico </li>
+                </ul>
+                </div>
+        <div class="title">
+             <a href="../index.html">Voltar para tela de cards!</a> 
         </div>
 
     </div>
 </div>
 
-
-
-
-    
 </body>
 </html>
