Changed one letter in the code

--- a/html/howToModelData.html
+++ b/html/howToModelData.html
@@ -16,7 +16,7 @@
         </ul>
     </header>
     <section class="section">
-        <img src="../assests/Modelos.png" class="img">
+        <img src="../assets/Modelos.png" class="img">
         <h2 id="text">Como Modelar Dados</h2>
     </section>
     <div class="sec">
