Changed one letter

--- a/html/introductionToDataModeling.html
+++ b/html/introductionToDataModeling.html
@@ -10,7 +10,7 @@
   <body>
     <div class="page-modelagem">
       <div class="image-container">
-        <img src="../assests/Modelos.png" class="img">
+        <img src="../assets/Modelos.png" class="img">
         <div class="title">O que é modelagem de dados?</div>
       </div>
       <div class="container">
