--- a/html/howToModelData.html
+++ b/html/howToModelData.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../style/index.css" />
     <title>Como Modelar Dados</title>
 </head>
-<body class="principalCoantainer">
+<body class="principal-container">
     <header class="header">
         <a href="#" class="logo">Logo</a>
         <ul class="ul">
