--- a/html/howToModelData.html
+++ b/html/howToModelData.html
@@ -21,7 +21,7 @@
     </section>
     <div class="sec">
         <h2>Placeholder</h2>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae illum exercitationem, 
+        <p>Ll orem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae illum exercitationem, 
             ipsa commodi distinctio velit reprehenderit accusantium eius, natus, iste alias. 
             Neque nam odio ab adipisci temporibus eius, nesciunt tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, 
             molestiae? Totam quae sit consectetur, dolorem, 
