--- a/html/mainStepsToDataModeling.html
+++ b/html/mainStepsToDataModeling.html
@@ -15,5 +15,86 @@
           <div class="title">Principais passos para modelagem de dados</div>
         </div>
 
+        <div class="container">
+          <div class="text-container">
+            <p class="subtitle-text">O que é o processo de modelagem de dados?</p>
+            <p class="text">
+              Você já deve saber a importância da modelagem de dados, mas você sabe
+              o como esse processo é criado, seus símbolos ou quais são os passos necessários? <br>
+              O processo de modelagem de dados consiste no cumprimento de 6 passos, sendo eles:<br><br>
+              <ol class="text">
+                <li class="li-mainStepsToDataModeling">Identificação das entidades.</li>
+                <li class="li-mainStepsToDataModeling">Identificação das principais propriedades de cada entidade.</li>
+                <li class="li-mainStepsToDataModeling">Identificar relacionamentos entre entidades.</li>
+                <li class="li-mainStepsToDataModeling">Mapear atributos para entidades completamente.</li>
+                <li class="li-mainStepsToDataModeling">Normalização, redução de redundâncias e melhora de desempenho.</li>
+                <li class="li-mainStepsToDataModeling">Finalização e validação do modelo de dados.</li>
+              </ol>
+            </p>
+          </div>
+
+          <div class="text-container">
+            <p class="subtitle-text">1. Identificação das entidades.</p>
+            <p class="text">
+              O processo de modelagem de dados se inicia com a identificação das entidades,
+              esse processo é responsável por identificar as entidades, itens, eventos ou conceitos
+              presentes no sistema.
+            </p>
+          </div>
+
+          <div class="text-container">
+            <p class="subtitle-text">2. Identificação das principais propriedades da entidade.</p>
+            <p class="text">
+              Neste passo deve se identificar as propriedades das entidades,
+              serão esses atributos que irão diferenciar umas das outras. Um exemplo
+              disso seria a entidade carro, o carro pode ter esses atributos, que diferenciam uns dos outros:<br>
+              <ul class="text">
+                <li class="li-mainStepsToDataModeling">Modelo</li>
+                <li class="li-mainStepsToDataModeling">Cor</li>
+                <li class="li-mainStepsToDataModeling">Ano de fabricação</li>
+              </ul>
+            </p>
+          </div>
+          
+          <div class="text-container">
+            <p class="subtitle-text">3. Identificar relacionamentos entre entidades.</p>
+            <p class="text">
+              Neste passo deve se identificar as relações que as entidades tem umas
+              com as outras, pode se pensar que os relacionamentos são como as entidades
+              se "conversam", um exemplo disso seria: Vários carros(entidades) ficam em uma concessionária,
+              quando um cliente(outra entidade) compra um carro ele está interagindo com o carro!
+            </p>
+          </div>
+          
+          <div class="text-container">
+            <p class="subtitle-text">4. Identificar os atributos completamente.</p>
+            <p class="text">
+              Neste passo deve se identificar todos os atributos e funcionalidades do sistema. 
+              Mapeando todo o sistema será possível realizar uma padronização na modelagem de dados.
+            </p>
+          </div>
+
+          <div class="text-container">
+            <p class="subtitle-text">5. Normalização, redução de redundâncias e melhora de desempenho.</p>
+            <p class="text">
+              Neste passo deve se identificar qualquer tipo de redundância desnecessária e resolve-la,
+               pois isso aumenta o desempenho do sistema! Mas cuidado pois isso pode melhorar
+                ou piorar a legibilidade do sistema.
+            </p>
+          </div>
+
+          <div class="text-container">
+            <p class="subtitle-text">6. Finalização e validação do modelo de dados.</p>
+            <p class="text">
+              Esse é o último passo da modelagem de dados,
+               nele deve se repetir os outros passo e o sistema refinado conforme o necessário.
+            </p>
+          </div>
+
+          <div class="text">
+            <a href="../index.html">Voltar para tela de cards!</a>
+          </div>
+
+    </div>
   </body>
 </html>
