--- a/html/introductionToDataModeling.html
+++ b/html/introductionToDataModeling.html
@@ -8,6 +8,14 @@
   </head>
 
   <body>
+    <header class="header">
+      <a href="#" class="logo">Logo</a>
+      <ul class="ul">
+          <li class="li"><a href="#" class="a" id="active">Home</a></li>
+          <li class="li"><a href="#" class="a">Dropdown</a></li>
+          <li class="li"><a href="#" class="a">Quem somos</a></li>
+      </ul>
+  </header>
     <div class="page-modelagem">
       <div class="image-container">
         <img src="../assets/Modelos.png" class="img">
