--- a/html/howToModelData.html
+++ b/html/howToModelData.html
@@ -37,9 +37,8 @@
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestiae illum exercitationem, 
             ipsa commodi distinctio velit reprehenderit accusantium eius, natus, iste alias. 
             Neque nam odio ab adipisci temporibus eius, nesciunt tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed, 
-            molestiae? Totam quae sit consectetur, dolorem, 
-            deserunt corporis at illo fuga debitis quidem molestias? 
-            Repellat dignissimos assumenda optio praesentium aliquam enim!<br><br></p>
+         ? 
+            Repellat dignissimos assumenda optio praesentium aliquamium enim!<br><br></p>
     </div>
 </body>
 </html>
