Fixing the image

--- a/html/conceptualModel.html
+++ b/html/conceptualModel.html
@@ -15,9 +15,9 @@
             <li class="li"><a href="#" class="a">Quem somos</a></li>
         </ul>
     </header>
-    <section class="section">
+    <div class="image-container">
         <img src="../assets/Modelos.png" class="img">
         <div class="title">Modelo Conceitual</div>
-    </section>
+    </div>
 </body>
 </html>
