--- a/html/conceptualModel.html
+++ b/html/conceptualModel.html
@@ -19,5 +19,34 @@
         <img src="../assets/Modelos.png" class="img">
         <div class="title">Modelo Conceitual</div>
     </div>
+    <div class="container">
+        <div class="text-container">
+            <p class="subtitle-text">Conceitos</p>
+            <br>
+            <p class="subtitle-text">Entidade</p>
+            <p class="text">
+                Pode ser tanto algo real (animais, pessoas, objetos,etc) como um conceito (trabalho, projeto, empresa), 
+                deve ser identificada logo na engenharia de requisitos e representa um conjunto de objetos com caracteristicas semelhantes, 
+                entidades são as tabelas em um banco de dados.
+                <br>
+                <br>
+                Representação grafica:
+                <br>
+                <img src="../assets/Entity.png" class="text-img">
+            </p>
+            <p class="subtitle-text">Atributo</p>
+            <p class="text">
+                Atributos são características ou propriedades que descrevem uma entidade em um banco de dados. Em um diagrama de Entidade-Relacionamento (ER), 
+                eles são representados por elipses ligadas à entidade correspondente. Cada atributo contém valores específicos que fornecem informações detalhadas sobre a entidade. 
+                Por exemplo, em uma entidade "Aluno", atributos como "Nome", "Idade" e "Matrícula" descrevem diferentes aspectos de cada aluno.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita cum minima beatae distinctio dolor magni delectus! Voluptatum laudantium omnis est nobis inventore cum laborum, ullam dolor unde non autem eius.
+                <br>
+                <br>
+                Representação grafica:
+                <br>
+                <img src="../assets/Entity.png" class="text-img">
+            </p>
+        </div>
+    </div>
 </body>
 </html>
