Adding a logo functionality

--- a/html/introductionToDataModeling.html
+++ b/html/introductionToDataModeling.html
@@ -9,7 +9,7 @@
 
   <body>
     <header class="header">
-      <a href="#" class="logo">Logo</a>
+      <a href="../index.html" class="logo"><img src="../assets/Logo.jpg" width="80vh" height="80vh"></a>
       <ul class="ul">
           <li class="li"><a href="#" class="a" id="active">Home</a></li>
           <li class="li"><a href="#" class="a">Dropdown</a></li>
