--- a/html/logicModel.html
+++ b/html/logicModel.html
@@ -8,7 +8,7 @@
 </head>
 <body class="principal-container">
     <header class="header">
-        <a href="#" class="logo">Logo</a>
+        <a href="../index.html" class="logo"><img src="../assets/Logo.jpg" width="80vh" height="80vh"></a>
         <ul class="ul">
             <li class="li"><a href="#" class="a" id="active">Home</a></li>
             <li class="li"><a href="#" class="a">Dropdown</a></li>
