--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <div class="content">
     <nav class="navbar">
       <span class="navBarLeft">
-        <h3 class="navBarTitle">NomeFodase</h3>
-        <img src="./assets/logo.png" alt="brand-logo.png" class="nav-logo">
+        <h3 class="navBarTitle">Placeholder</h3>
+        <img src="./assets/Logo.jpg" alt="brand-logo.png" class="nav-logo">
       </span>
       <section class="links">
         <a href="" class="aLink">Home</a>
