--- a/html/introductionToDataModeling.html
+++ b/html/introductionToDataModeling.html
@@ -38,14 +38,14 @@
           <p class="text">
             A modelagem de dados é o processo de criação de um esquema visual de um sistema, seus dados,
              suas ligações e como se relacionam. Esse diagrama ajuda partes distintas do projeto,
-              como engenheiros, programadores ou qualquer outra profissão, a terem uma visão unificada do mesmo.
+              como engenheiros, programadores ou qualquer outra profissão, a terem uma visão unificada do mesmo. <br>
 
             Podendo ser aplicada de várias formas, a modelagem de dados pode ser utilizada para resolver problemas
              de qualquer tamanho, desde um pequeno modelo departamental para verificar como alguns poucos dados se 
              relacionam com o objetivo de análise, até um grande modelo de dados dos processos industriais de uma
             empresa e como cada um se liga e se relaciona.
             Modelos descrevem quais dados são coletados, as relações entre seus diferentes conjuntos e as formas
-             usadas para guardar e analisar esses dados.
+             usadas para guardar e analisar esses dados. <br>
             
             A modelagem em si é um conjunto de técnicas para criar um modelo desde as criações de modelos conceituais,
              lógicos e físicos de dados.
