--- a/html/mainStepsToDataModeling.html
+++ b/html/mainStepsToDataModeling.html
@@ -75,7 +75,9 @@ De onde vem? Para onde vai?
             <p class="text">
               Com entidades, Atributos e Relacionamentos esclarecidos,
                devemos criar seu diagrama visual para descrever de forma simplificada o modelo.
-
+               Exemplo:
+               <br>
+               <img src="../assets/DER.jpg" class="text-img">
 
             </p>
           </div>
