--- a/html/conceptualModel.html
+++ b/html/conceptualModel.html
@@ -21,6 +21,17 @@
     </div>
     <div class="container">
         <div class="text-container">
+            <p class="subtitle-text">O que é?</p>
+            <p class="text">
+                Também chamados de modelos de domínio, o modelo de dados
+                 conceituais oferece uma visão geral do que o sistema terá
+                  e como será organizado. Esse tipo de modelo costuma ser
+                   utilizado como parte de um processo de coleta de requisitos
+                    iniciais do projeto.
+                <br>
+
+            </p>
+
             <p class="subtitle-text">Conceitos</p>
             <br>
             <p class="subtitle-text">Entidade</p>
