--- a/html/logicModel.html
+++ b/html/logicModel.html
@@ -21,33 +21,74 @@
     </div>
     <div class="container">
         <div class="text-container">
-            <p class="subtitle-text">PLACEHOLDER</p>
-            <br>
-            <p class="subtitle-text">PLACEHOLDER</p>
+
+            <p class="subtitle-text">Modelo Lógico de BD</p>
             <p class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, inventore modi! Maxime 
-                provident minima accusantium repellendus laborum. Dolores fugiat modi ex amet, eum omnis facilis, reiciendis nam libero
-                 adipisci iusto! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit corporis amet soluta sunt, esse rerum? 
-                 Enim delectus suscipit asperiores error! Commodi 
-                dipisci perspiciatis suscipit repellendus ipsum quidem qui numquam. Odit?
+                Depois de termos um modelo conceitual de dados definido,
+                a proxima etapa de um projeto de Banco de Dados é a
+                construção de um modelo lógico. O modelo lógico descreve
+                as estruturas que serão armazenadas no Banco de Dados,
+                ele representa graficamente os dados de uma maneira lógica.
+                A tecnica de modelagem de dados mais difundida é a
+                 abordagem entidade-relacionamento, para construir 
+                 Diagramas de Entidade-Relacionamento (DER). <br>
+                 Existem vários modelos lógicos de Banco de Dados e o mais
+                 difundido é o Modelo Relacional.
                 <br>
                 <br>
-                Representação grafica:
                 <br>
-                <img src="../assets/Entity.png" class="text-img">
+        
             </p>
-            <p class="subtitle-text">PLACEHOLDER</p>
+
             <p class="text">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, inventore modi! Maxime 
-                provident minima accusantium repellendus laborum. Dolores fugiat modi ex amet, eum omnis facilis, reiciendis nam libero
-                 adipisci iusto! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Odit corporis amet soluta sunt, esse rerum? 
-                 Enim delectus suscipit asperiores error! Commodi 
-                dipisci perspiciatis suscipit repellendus ipsum quidem qui numquam. Odit?
+                Modelo de Rede: ele é representado por um conjunto de registros,
+                e as relações são efetivadas por meio de ponteiros;
                 <br>
                 <br>
                 Representação grafica:
                 <br>
                 <img src="../assets/Entity.png" class="text-img">
+                <br>
+                <br>
+                Modelo Hierárquico: similar ao moduloem rede, mas os registros 
+                são armazenados numa estrutura de arvore;
+                <br>
+                <br>
+                Representação grafica:
+                <br>
+                <img src="../assets/Entity.png" class="text-img">
+                <br>
+                <br>
+                Modelo Orientado a Objetos: nos leva a imaginar que os dados
+                são armazenados encima de estrururas de objetos, assim como
+                o nome sugére;
+                <br>
+                <br>
+                Representação grafica:
+                <br>
+                <img src="../assets/Entity.png" class="text-img">
+                <br>
+                <br>
+                Modelo Relacional: utiliza um conjunto de tabelas que são
+                formadas por linhas e por colunas.
+                <br>
+            </p>
+
+            <p class="subtitle-text">Modelo Relacional</p>
+            <p class="text">
+                Um banco de dados relacional é composto de tabelas, que
+                tabém são chamadas de relações, a terminologia tabela
+                é mais comum nos produtos comerciais e na prática. <br>
+                Tabelas são o conjunto não ordenado de linhas 
+                (também chamado de tuplas). Cada linha é composta por uma
+                série de campos (atributos), cada campo é identificado
+                 por um nome, o conjunto de campos de todas as linhas
+                 de uma tabela formam uma coluna. 
+                <br>
+                <br>
+                Representação grafica:
+                <br>
+                <img src="../assets/Relacional1.png" class="text-img">
             </p>
         </div>
     </div>
