create courses cards

--- a/index.html
+++ b/index.html
@@ -28,14 +28,27 @@
         <a href="" class="aLink">Quem somos</a>
       </section>
     </nav>
-    <section class="page">
-     Lorem ipsum dolor sit amet consectetur,
-      adipisicing elit. Itaque ea sit officiis, excepturi ullam quos. Te
-      mporibus libero repudiandae veniam molestiae quam laboriosam illo debiti
-      s! Earum quis pariatur cum quod doloribus. <br>
-      <a href="./html/ModelagemDados.html">Provisorio enquanto não tem card</a>
+    <h1 class="courses-section-title">Nossos cursos</h1>
+    <section class="courses">
+      <div class="course-card">
+        <h2 class="course-title">Modelagem de dados</h2>
+      </div>
+      <div class="course-card">
+        <h2 class="course-title">Modelagem de dados</h2>
+      </div>
+      <div class="course-card">
+        <h2 class="course-title">Modelagem de dados</h2>
+      </div>
+      <div class="course-card">
+        <h2 class="course-title">Modelagem de dados</h2>
+      </div>
+      <div class="course-card">
+        <h2 class="course-title">Modelagem de dados</h2>
+      </div>
+      <div class="course-card">
+        <h2 class="course-title">Modelagem de dados</h2>
+      </div>
     </section>
-    <footer class="footer">Made with love</footer>
   </div>
 </div>
 </body>
