add placeholder courses

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
       <div class="course-card">
         <h2 class="course-title">Modelagem de dados</h2>
       </div>
+      <div class="course-card">
+        <h2 class="course-title">Modelagem de dados</h2>
+      </div>
+      <div class="course-card">
+        <h2 class="course-title">Modelagem de dados</h2>
+      </div>
     </section>
   </div>
 </div>
