adding some details

--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -53,7 +53,7 @@
         <img src="../assets/marmelo.jpg" alt="Foto do Nome do Membro 1" class="member-picture">
         <div>
             <h3>Marcelo Korin</h3>
-            <p>Responsável por [função], Marcelo tem paixão por [descrição breve de interesse técnico, como frontend, backend, etc.].</p>
+            <p>Responsável pelos módulos (Como Modelar Dados, Modelo Conceitual, Modelo Lógico e Modelo Físico), Marcelo tem vontade de se tornar um progaramador full stack.</p>
         </div>
     </div>
 
