--- a/html/mainStepsToDataModeling.html
+++ b/html/mainStepsToDataModeling.html
@@ -13,7 +13,7 @@
       <ul class="ul">
           <li class="li"><a href="#" class="a" id="active">Home</a></li>
           <li class="li"><a href="#" class="a">Dropdown</a></li>
-          <li class="li"><a href="#" class="a">Quem somos</a></li>
+          <li class="li"><a href="./aboutUs.html" class="a">Quem somos</a></li>
       </ul>
   </header>
 
