Finished DB page

--- a/html/howToBuildEfficientDB.html
+++ b/html/howToBuildEfficientDB.html
@@ -20,7 +20,7 @@
       </header>
       <section class="section">
         <img src="../assets/Modelos.png" class="img" />
-        <h2 id="text">Como construir um DB eficiente</h2>
+        <h2 id="text">Como construir<br> um DB eficiente</h2>
       </section>
 
       <div class="container">
