Changed some words look better

--- a/html/introductionToDataModeling.html
+++ b/html/introductionToDataModeling.html
@@ -4,10 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../style/index.css" />
-    <title>O que é modelagem de dados</title>
+    <title>Introdução a modelagem de dados</title>
   </head>
 
   <body>
+
+    <div class="page-modelagem">
+
     <header class="header">
       <a href="../index.html" class="logo"><img src="../assets/Logo.jpg" width="80vh" height="80vh"></a>
       <ul class="ul">
@@ -16,11 +19,11 @@
           <li class="li"><a href="#" class="a">Quem somos</a></li>
       </ul>
   </header>
-    <div class="page-modelagem">
-      <div class="image-container">
-        <img src="../assets/Modelos.png" class="img">
-        <div class="title">O que é modelagem de dados?</div>
-      </div>
+  <section class="section">
+      <img src="../assets/Modelos.png" class="img">
+      <h2 id="text">introdução a modelagem de dados</h2>
+  </section>
+    
       <div class="container">
         <div class="text-container">
           <p class="subtitle-text">Primeira vez vendo o curso?</p>
