Changed some words to look better

--- a/html/mainStepsToDataModeling.html
+++ b/html/mainStepsToDataModeling.html
@@ -8,20 +8,20 @@
   </head>
 
   <body>
-    <header class="header">
-      <a href="../index.html" class="logo"><img src="../assets/Logo.jpg" width="80vh" height="80vh"></a>
-      <ul class="ul">
-          <li class="li"><a href="#" class="a" id="active">Home</a></li>
-          <li class="li"><a href="#" class="a">Dropdown</a></li>
-          <li class="li"><a href="#" class="a">Quem somos</a></li>
-      </ul>
-  </header>
-
     <div class="page-modelagem">
-        <div class="image-container">
-          <img src="../assets/Modelos.png" class="img">
-          <div class="title">Principais passos para modelagem de dados</div>
-        </div>
+
+      <header class="header">
+        <a href="../index.html" class="logo"><img src="../assets/Logo.jpg" width="80vh" height="80vh"></a>
+        <ul class="ul">
+            <li class="li"><a href="#" class="a" id="active">Home</a></li>
+            <li class="li"><a href="#" class="a">Dropdown</a></li>
+            <li class="li"><a href="#" class="a">Quem somos</a></li>
+        </ul>
+    </header>
+    <section class="section">
+        <img src="../assets/Modelos.png" class="img">
+        <h2 id="text">Como Modelar Dados</h2>
+    </section>
 
         <div class="container">
           <div class="text-container">
