--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="#">Penis grande</a>
           </div>
         </div>
-        <a href="" class="aLink">Quem somos</a>
+        <a href="./html/aboutUs.html" class="aLink">Quem somos</a>
       </section>
     </nav>
     <h1 class="courses-section-title">Nossos cursos</h1>
