adding image codes

--- a/html/logicModel.html
+++ b/html/logicModel.html
@@ -47,7 +47,7 @@
                 <br>
                 Representação grafica:
                 <br>
-                <img src="../assets/Entity.png" class="text-img">
+                <img src="../assets/rede.jpg" class="text-img">
                 <br>
                 <br>
                 Modelo Hierárquico: similar ao moduloem rede, mas os registros 
@@ -56,7 +56,7 @@
                 <br>
                 Representação grafica:
                 <br>
-                <img src="../assets/Entity.png" class="text-img">
+                <img src="../assets/hierarchicalmodel.jpg" class="text-img">
                 <br>
                 <br>
                 Modelo Orientado a Objetos: nos leva a imaginar que os dados
@@ -66,11 +66,16 @@
                 <br>
                 Representação grafica:
                 <br>
-                <img src="../assets/Entity.png" class="text-img">
+                <img src="../assets/MOO.jpg" class="text-img">
                 <br>
                 <br>
                 Modelo Relacional: utiliza um conjunto de tabelas que são
                 formadas por linhas e por colunas.
+                <br>
+                <br>
+                Representação grafica:
+                <br>
+                <img src="../assets/relacional2.jpg" class="text-img">
                 <br>
             </p>
 
