fixing some details

--- a/html/logicModel.html
+++ b/html/logicModel.html
@@ -95,6 +95,43 @@
                 <br>
                 <img src="../assets/Relacional1.png" class="text-img">
             </p>
+            <p class="subtitle-text">Chaves:</p>
+            <p class="text">
+                Identifica linhas e relaciona tabelas em um Banco de Dados
+                 Relacional. <br>
+                 Em um Banco de Dados Relacional, basicamente, existem 3
+                 que devem ser considerados:
+                 <ul class="text">
+                    <li class="li-mainStepsToDataModeling">
+                        Chave Primaria;
+                    </li>
+                    <li class="li-mainStepsToDataModeling">
+                        Chave Estrangeira;
+                    </li>
+                    <li class="li-mainStepsToDataModeling">
+                        Chave Candidata.
+                  </ul>
+                   <br>
+                   Chave Primária: Uma coluna (ou uma combinação delas)
+                   cujos valores distinguem uma linha das demais dentro
+                   de uma mesma tabela. Uma chave primária não pode conter
+                   valores nulos e nem pode se repetir. Por exemplo: o CPF
+                   de um individuo.
+                   <br>
+                   Chave Estrangeiras: Uma coluna (ou uma combinação de
+                    colunas) cujos valores aparecem obrigatoriamente
+                    na chave primária de uma tabela. Uma chave Estrangeira
+                    permite a implementação dos relacionamentos entre 
+                    tabelas de um Banco de Dados Relacional.
+                    <br>
+                    Chave Candidata (ou Alternativa): Uma coluna (ou uma
+                    xombinação de colunas) que é candidata a ser uma
+                    chave primária.
+                    Possui as mesmas características de uma chave primária,
+                    porém não foi escolhida pelo projetista de Banco de 
+                    Dados Relacional.
+
+            </p>
         </div>
     </div>
 </body>
