fixing some details

--- a/html/logicModel.html
+++ b/html/logicModel.html
@@ -112,6 +112,7 @@
                         Chave Candidata.
                   </ul>
                    <br>
+                   <p class="text">
                    Chave Primária: Uma coluna (ou uma combinação delas)
                    cujos valores distinguem uma linha das demais dentro
                    de uma mesma tabela. Uma chave primária não pode conter
@@ -130,7 +131,8 @@
                     Possui as mesmas características de uma chave primária,
                     porém não foi escolhida pelo projetista de Banco de 
                     Dados Relacional.
-
+            </p>
+                    
             </p>
         </div>
     </div>
